# Lib-optimizacion-byzain

./: LICENSE  README.md  __init__.py  pyproject.toml
src/Lib_optimizacionbyzain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/funciones_prueba/: __init__.py  funcionesmultivariable.py  funcionesunivariable.py
src/metodos_multivariable/: __init__.py  caminata_aleatoria.py  met_cauchy.py  met_fletcher_reeves.py  met_hooke_jeeves.py  met_newton.py  nelder_mead_simplex.py
src/metodos_univariable/: __init__.py  bisection.py  fibonacci.py  golden_section.py  interval_halving.py  newton_raphson.py  secante.py
