[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Lib_optimizacionbyzain"
version = "0.1.1"
authors = [
  { name="Zain", email="azi3lmtz@gmail.com" },
]
description = "Una gran variedad de metodos de optimizacion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zamm079/Lib-optimizacion-byzain"
Issues = "https://github.com/zamm079/Lib-optimizacion-byzain/issues"